--- a/.github/workflows/build_rechunk.yml
+++ b/.github/workflows/build_rechunk.yml
@@ -51,8 +51,8 @@ jobs:
             exit 1
           fi
 
-          sudo podman tag fedora_build ghcr.io/hhd-dev/rechunk:$VERSION-${{ matrix.arch }}
-          sudo podman push ghcr.io/hhd-dev/rechunk:$VERSION-${{ matrix.arch }}
+          sudo podman tag fedora_build ghcr.io/fyralabs/rechunk:$VERSION-${{ matrix.arch }}
+          sudo podman push ghcr.io/fyralabs/rechunk:$VERSION-${{ matrix.arch }}
   
   deploy_combined_ghcr:
     runs-on: ubuntu-24.04
@@ -76,13 +76,13 @@ jobs:
 
           sudo podman manifest create rechunk
           
-          SHA=$(sudo skopeo inspect docker://ghcr.io/hhd-dev/rechunk:$VERSION-x86_64 | jq --raw-output ".Digest")
-          sudo podman manifest add rechunk ghcr.io/hhd-dev/rechunk@$SHA --arch amd64
+          SHA=$(sudo skopeo inspect docker://ghcr.io/fyralabs/rechunk:$VERSION-x86_64 | jq --raw-output ".Digest")
+          sudo podman manifest add rechunk ghcr.io/fyralabs/rechunk@$SHA --arch amd64
           if [[ "${{ github.event.inputs.x86 }}" != "true" ]]; then
-            SHA=$(sudo skopeo inspect docker://ghcr.io/hhd-dev/rechunk:$VERSION-aarch64 | jq --raw-output ".Digest")
-            sudo podman manifest add rechunk ghcr.io/hhd-dev/rechunk@$SHA --arch arm64
+            SHA=$(sudo skopeo inspect docker://ghcr.io/fyralabs/rechunk:$VERSION-aarch64 | jq --raw-output ".Digest")
+            sudo podman manifest add rechunk ghcr.io/fyralabs/rechunk@$SHA --arch arm64
           fi
 
-          sudo podman manifest push --all=false rechunk ghcr.io/hhd-dev/rechunk:latest
-          sudo podman manifest push --all=false rechunk ghcr.io/hhd-dev/rechunk:stable
-          sudo podman manifest push --all=false rechunk ghcr.io/hhd-dev/rechunk:$VERSION
+          sudo podman manifest push --all=false rechunk ghcr.io/fyralabs/rechunk:latest
+          sudo podman manifest push --all=false rechunk ghcr.io/fyralabs/rechunk:stable
+          sudo podman manifest push --all=false rechunk ghcr.io/fyralabs/rechunk:$VERSION
