--- a/.github/workflows/online_test_deck.yml
+++ b/.github/workflows/online_test_deck.yml
@@ -34,16 +34,16 @@ jobs:
         uses: ublue-os/remove-unwanted-software@v7
       - name: Download images (optional)
         run: |
-          sudo podman pull ghcr.io/hhd-dev/rechunk:latest
+          sudo podman pull ghcr.io/fyralabs/rechunk:latest
           sudo podman pull ghcr.io/ublue-os/bazzite-deck:${{ github.event.inputs.ref }}
       - name: Run Rechunker
         id: rechunk
-        uses: ./. # IMPORTANT: Use a tag, e.g.: "hhd-dev/rechunk@v0.6.4"
+        uses: ./. # IMPORTANT: Use a tag, e.g.: "fyralabs/rechunk@v0.6.4"
         with:
           ref: 'ghcr.io/ublue-os/bazzite-deck:${{ github.event.inputs.ref }}'
-          prev-ref: ghcr.io/hhd-dev/bazzite-automated-deck:stable
+          prev-ref: ghcr.io/fyralabs/bazzite-automated-deck:stable
           clear-plan: ${{ github.event.inputs.prev == 'false' && '1' || '' }}
-          rechunk: 'ghcr.io/hhd-dev/rechunk:latest' # IMPORTANT: Use the same tag e.g., :0.6.4
+          rechunk: 'ghcr.io/fyralabs/rechunk:latest' # IMPORTANT: Use the same tag e.g., :0.6.4
           version: 'rc${{ github.event.inputs.ref }}'
           revision: ${{ github.sha }}
           pretty: 'Rechunked (from ${{ github.event.inputs.ref }})'
@@ -94,7 +94,7 @@ jobs:
 
           formatters: |
             commits.none=No changes\n
-            commits.commit=- **[<short>](https://github.com/hhd-dev/rechunk/commit/<hash>)** <subject>\n
+            commits.commit=- **[<short>](https://github.com/fyralabs/rechunk/commit/<hash>)** <subject>\n
             pkgupd.none=No package updates\n
             pkgupd.add=- **<package>** Added at <new>\n
             pkgupd.update=- **<package>** <old> → <new>\n
@@ -119,8 +119,8 @@ jobs:
         shell: bash
         run: |
           if [[ "${{ github.event.inputs.latest }}" == "true" ]]; then
-            sudo skopeo copy ${{ steps.rechunk.outputs.ref }} docker://ghcr.io/hhd-dev/bazzite-automated-deck:latest
-            sudo skopeo copy ${{ steps.rechunk.outputs.ref }} docker://ghcr.io/hhd-dev/bazzite-automated-deck:stable
+            sudo skopeo copy ${{ steps.rechunk.outputs.ref }} docker://ghcr.io/fyralabs/bazzite-automated-deck:latest
+            sudo skopeo copy ${{ steps.rechunk.outputs.ref }} docker://ghcr.io/fyralabs/bazzite-automated-deck:stable
           fi
-          sudo skopeo copy ${{ steps.rechunk.outputs.ref }} docker://ghcr.io/hhd-dev/bazzite-automated-deck:${{ steps.rechunk.outputs.version }}
+          sudo skopeo copy ${{ steps.rechunk.outputs.ref }} docker://ghcr.io/fyralabs/bazzite-automated-deck:${{ steps.rechunk.outputs.version }}
         
